@@ -502,3 +502,11 @@
             - elm_layout_text_get
             - elm_layout_text_set
             - elm_layout_theme_set
+
+2012-09-14  Doyoun Kang
+
+	* Add APIs for floating mode
+          - elm_win_floating_mode_set
+          - elm_win_floating_mode_get
+
+
